Fix text wrap issues with jconfirm

--- a/timeweb/common/static/common/css/app_base.css
+++ b/timeweb/common/static/common/css/app_base.css
@@ -417,7 +417,7 @@ nav:focus-within {
     max-height: 60vh !important;
 }
 .jconfirm .jconfirm-box {
-    width: min(70%, 800px) !important;
+    width: min(70vw, 800px) !important;
     background-color: var(--body-background) !important;
 }
 .jconfirm .jconfirm-box div.jconfirm-content-pane .jconfirm-content {
@@ -430,10 +430,14 @@ nav:focus-within {
 .jconfirm .jconfirm-box div.jconfirm-title-c {
     font-size: 16px !important;
     line-height: 18px !important;
+    overflow-wrap: break-word;
+}
+.jconfirm .jconfirm-box div.jconfirm-title-c .jconfirm-title {
+    display: initial !important;
 }
 @media screen and (max-width: 700px) {
     .jconfirm .jconfirm-box {
         /* First 30 for the padding due to a lack of border-box, second 30 for the right and left margin */
-        width: calc(100% - 30px - 30px) !important;
+        width: calc(100vw - 30px - 30px) !important;
     }
 }
